// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-tree-item should render with _label="Label" _href="https://example.com" _active=false 1`] = `
<kol-tree-item>
  <template shadowrootmode="open">
    <kol-tree-item-wc>
      <!---->
      <li class="kol-tree-item" style="--level: 0;">
        <div class="kol-link kol-link--inline kol-tree-item__link kol-tree-item__link--first-level">
          <a class="kol-link__anchor" href="https://example.com" role="treeitem" tabindex="-1">
            <span class="kol-link__text kol-span">
              <span class="kol-span__container">
                <span class="kol-span__label">
                  <slot-fb name="expert" slot="expert">
                    <span class="kol-tree-item__link-inner" slot="expert">
                      <span class="kol-tree-item__toggle-button-placeholder"></span>
                      <span class="kol-tree-item__text">
                        Label
                      </span>
                    </span>
                  </slot-fb>
                </span>
              </span>
            </span>
          </a>
        </div>
        <ul class="kol-tree-item__children" hidden="" id="tree-group-nonce" role="group">
          <slot></slot>
        </ul>
      </li>
    </kol-tree-item-wc>
  </template>
</kol-tree-item>
`;

exports[`kol-tree-item should render with _label="Label" _href="https://example.com" _active=true 1`] = `
<kol-tree-item>
  <template shadowrootmode="open">
    <kol-tree-item-wc>
      <!---->
      <li class="kol-tree-item" style="--level: 0;">
        <div class="kol-link kol-link--inline kol-tree-item__link kol-tree-item__link--active kol-tree-item__link--first-level">
          <a class="kol-link__anchor" href="https://example.com" role="treeitem">
            <span class="kol-link__text kol-span">
              <span class="kol-span__container">
                <span class="kol-span__label">
                  <slot-fb name="expert" slot="expert">
                    <span class="kol-tree-item__link-inner" slot="expert">
                      <span class="kol-tree-item__toggle-button-placeholder"></span>
                      <span class="kol-tree-item__text">
                        Label
                      </span>
                    </span>
                  </slot-fb>
                </span>
              </span>
            </span>
          </a>
        </div>
        <ul class="kol-tree-item__children" hidden="" id="tree-group-nonce" role="group">
          <slot></slot>
        </ul>
      </li>
    </kol-tree-item-wc>
  </template>
</kol-tree-item>
`;

exports[`kol-tree-item should render with _label="Label" _href="https://example.com" _open=false 1`] = `
<kol-tree-item>
  <template shadowrootmode="open">
    <kol-tree-item-wc>
      <!---->
      <li class="kol-tree-item" style="--level: 0;">
        <div class="kol-link kol-link--inline kol-tree-item__link kol-tree-item__link--first-level">
          <a class="kol-link__anchor" href="https://example.com" role="treeitem" tabindex="-1">
            <span class="kol-link__text kol-span">
              <span class="kol-span__container">
                <span class="kol-span__label">
                  <slot-fb name="expert" slot="expert">
                    <span class="kol-tree-item__link-inner" slot="expert">
                      <span class="kol-tree-item__toggle-button-placeholder"></span>
                      <span class="kol-tree-item__text">
                        Label
                      </span>
                    </span>
                  </slot-fb>
                </span>
              </span>
            </span>
          </a>
        </div>
        <ul class="kol-tree-item__children" hidden="" id="tree-group-nonce" role="group">
          <slot></slot>
        </ul>
      </li>
    </kol-tree-item-wc>
  </template>
</kol-tree-item>
`;

exports[`kol-tree-item should render with _label="Label" _href="https://example.com" _open=true 1`] = `
<kol-tree-item>
  <template shadowrootmode="open">
    <kol-tree-item-wc>
      <!---->
      <li class="kol-tree-item" style="--level: 0;">
        <div class="kol-link kol-link--inline kol-tree-item__link kol-tree-item__link--first-level">
          <a class="kol-link__anchor" href="https://example.com" role="treeitem" tabindex="-1">
            <span class="kol-link__text kol-span">
              <span class="kol-span__container">
                <span class="kol-span__label">
                  <slot-fb name="expert" slot="expert">
                    <span class="kol-tree-item__link-inner" slot="expert">
                      <span class="kol-tree-item__toggle-button-placeholder"></span>
                      <span class="kol-tree-item__text">
                        Label
                      </span>
                    </span>
                  </slot-fb>
                </span>
              </span>
            </span>
          </a>
        </div>
        <ul class="kol-tree-item__children" hidden="" id="tree-group-nonce" role="group">
          <slot></slot>
        </ul>
      </li>
    </kol-tree-item-wc>
  </template>
</kol-tree-item>
`;

exports[`kol-tree-item should render with _label="Label" _href="https://example.com" 1`] = `
<kol-tree-item>
  <template shadowrootmode="open">
    <kol-tree-item-wc>
      <!---->
      <li class="kol-tree-item" style="--level: 0;">
        <div class="kol-link kol-link--inline kol-tree-item__link kol-tree-item__link--first-level">
          <a class="kol-link__anchor" href="https://example.com" role="treeitem" tabindex="-1">
            <span class="kol-link__text kol-span">
              <span class="kol-span__container">
                <span class="kol-span__label">
                  <slot-fb name="expert" slot="expert">
                    <span class="kol-tree-item__link-inner" slot="expert">
                      <span class="kol-tree-item__toggle-button-placeholder"></span>
                      <span class="kol-tree-item__text">
                        Label
                      </span>
                    </span>
                  </slot-fb>
                </span>
              </span>
            </span>
          </a>
        </div>
        <ul class="kol-tree-item__children" hidden="" id="tree-group-nonce" role="group">
          <slot></slot>
        </ul>
      </li>
    </kol-tree-item-wc>
  </template>
</kol-tree-item>
`;
